--- a/big2.html
+++ b/big2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大老二計分系統</title>
+    <title>Big2計分系統</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-    <h1>大老二計分系統</h1>
+    <h1>Big2計分系統</h1>
     <div id="mainContainer">
         <button class="player-btn player-1" onclick="setWinner(0)">玩家 1</button>
         <button class="player-btn player-2" onclick="setWinner(1)">玩家 2</button>
