--- a/big2.html
+++ b/big2.html
@@ -181,7 +181,7 @@
             <input id="multiplier" type="number" min="1" value="1">
         </div>
         <button class="input-btn" onclick="saveSettings()">儲存設定</button>
-        <button class="input-btn" onclick="resetGame()">重置</button>
+        <button class="input-btn" onclick="resetGame()">清空分數</button>
         <button class="input-btn" onclick="closeSettingsModal()">關閉</button>
     </div>
 
