--- a/big2.html
+++ b/big2.html
@@ -154,7 +154,7 @@
     </div>
 
     <div id="resultsContainer" class="container">
-        <h3>每場成績</h3>
+        <h3>每場結果</h3>
         <table>
             <thead>
                 <tr>
