--- a/big2fix.html
+++ b/big2fix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>修改大老二歷史記錄</title>
+    <title>修改Big2歷史記錄</title>
     <style>
         body {
             font-family: Arial, sans-serif;
